<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.mentalhealthquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="90dp"
            android:text="@string/mental_health_quiz"
            android:textAppearance="?android:textAppearanceLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dep_question"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/dep_yes_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anxiety_question"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/anxiety_yes_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hallucination_question"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/hallucination_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/hint"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/sleep_checkbox_question"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <CheckBox
            android:id="@+id/sleep_checkbox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sleep_checkbox_option1"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/sleep_checkbox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sleep_checkbox_option2"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/sleep_checkbox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/sleep_checkbox_option3"
            android:textAppearance="?android:textAppearanceMedium" />

        <CheckBox
            android:id="@+id/sleep_checkbox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/sleep_checkbox_option4"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dep_quetion2"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/dep_yes_radio_button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textAppearance="?android:textAppearanceMedium" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textAppearance="?android:textAppearanceMedium" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="90dp"
            android:background="@color/colorAccent"
            android:onClick="showScoreAndExitApp"
            android:padding="20dp"
            android:text="@string/submit" />
    </LinearLayout>
</ScrollView>
